fix code to work with java 11